--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.6"
+    "nodemon": "^3.1.6",
+    "vite": "^7.1.11"
   },
   "dependencies": {
     "axios": "^1.12.2",
